--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: libacchu <libacchu@student.42wolfsburg.de> +#+  +:+       +#+         #
+#    By: obibby <obibby@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/12/01 09:34:05 by libacchu          #+#    #+#              #
-#    Updated: 2022/04/14 23:29:34 by libacchu         ###   ########.fr        #
+#    Updated: 2023/01/19 12:10:40 by obibby           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
